[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruuvitag_sensor"
version = "2.3.1"
authors = [
  { name="Tomi Tuhkanen", email="tomi.tuhkanen@iki.fi" },
]
description = "Find RuuviTag sensors and get decoded data from selected sensors"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Framework :: Pytest"
]
keywords = [ "RuuviTag BLE" ]
dependencies = [
    "reactivex",
    "ptyprocess;platform_system=='Linux'",
    "bleak",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy"
]

[project.urls]
homepage = "https://github.com/ttu/ruuvitag-sensor"
source = "https://github.com/ttu/ruuvitag-sensor"
changelog = "https://github.com/ttu/ruuvitag-sensor/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/ttu/ruuvitag-sensor/issues"

[tool.pytest.ini_options]
testpaths = "tests/"

[tool.ruff]
exclude = [".venv", ".git", ".eggs", "__pycache__", "build", "dist"]
line-length = 120

[tool.ruff.lint]
select = ["A", "E", "F", "G", "I", "PERF", "PIE", "PL", "PTH", "SIM", "RUF", "Q", "W"]
ignore = ["PLR2004", "RUF006"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
